@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-25T08:22:11Z",
+  "timestamp" : "2022-07-25T16:22:31Z",
   "count_outdated" : 377,
   "uniques_outdated" : 237,
-  "count" : 404,
+  "count" : 405,
   "uniques" : 254,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
