@@ -1,3 +1,10 @@
+2022-07-25T16:22:31Z:
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 237 377 / 254 404
+* notice: next accum: outdated-unq outdated-all / unq all: 237 377 / 254 405
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-25]
+
 2022-07-25T08:22:11Z:
 * notice: last 14d: unq all: 6 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 237 377 / 253 404
